Terminei a parte sobre a empresa

--- a/equipe15/index.html
+++ b/equipe15/index.html
@@ -16,9 +16,24 @@
         <br> Esse framework diminui drasticamente o tempo de trabalho
         <br> que seria perdido com o código repetitivo.
         <br>
-        <br> O <b>certificado</b> de nosso curso, servirá amplamente para a carreira
+        <br> O
+        <b>certificado</b> de nosso curso, servirá amplamente para a carreira
         <br> de programador, assim como agregará seu conhecimento, através de métodos ágeis.
         <br>
+
+        <h2>Sobre a empresa Vrawr</h2>
+        <p>A mais de 5 minutos, empresas de todo o mundo contam com a Vrawr para a criação de
+            <br> um framework para os seus produtos, processos e sistemas.
+            <br> Além disso, utilizamos o nosso conhecimento para ampliar o conhecimento do programador.
+            <br> A nossa empresa oferece boas maneiras de programação, assim como um café bem moído com aquela Cream Cracker
+            que todo mundo respeita.
+            <br>
+            <br>
+            <br> O nosso curso é importante pois ensinamos você a desenvolver em uma framework de uma maneira eficiente.
+            <blockquote>
+                <p>O curso é fantástico! ~Enzo Gabriel, Engenheiro de software na SpaceX e Tesla Motors.</p>
+            </blockquote>
+        </p>
 
     </p>
 </body>
