Terminei as mudanças no index.html, falta deixar mais bonito

--- a/equipe15/index.html
+++ b/equipe15/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <h2>Sobre o treinamento</h2>
+    <h1>Sobre o treinamento</h1>
     <p>O treinamento seria baseado no framework
         <br> MVC web para desenvolvimento ágil com Java.
         <br> O treinamento consiste em como usar a ferramenta
@@ -21,7 +21,22 @@
         <br> de programador, assim como agregará seu conhecimento, através de métodos ágeis.
         <br>
 
-        <h2>Sobre a empresa Vrawr</h2>
+        <h1>Tipos de treinamento</h1>
+    <hr>
+    <p>O treinamento se baseia na seguinte forma: </p>
+    <h3>Presencial</h3>
+    <p>O nosso curso presencial se baseia nos seguintes fatores:</p>
+    <ul>
+        <li>Lógica do framework</li>
+        <li>Utilização de blocos para ensinar de forma didática</li>
+        <li>Criação de problemas baseado nos assuntos dados</li>
+        <li>Resolução de problemas</li>
+    </ul>
+    <br>
+    <h3>Ambiente Virtual</h3>
+    <p>Serão feitos a continuação da aprendizagem através do Ambiente Virtual.</p>
+
+        <h1>Sobre a empresa Vrawr</h1>
         <p>A mais de 5 minutos, empresas de todo o mundo contam com a Vrawr para a criação de
             <br> um framework para os seus produtos, processos e sistemas.
             <br> Além disso, utilizamos o nosso conhecimento para ampliar o conhecimento do programador.
@@ -35,7 +50,7 @@
             </blockquote>
         </p>
 
-        <a href="oquee.html">O Treinamento</href>
+        <a href="oquee.html">Nossa forma de treinamento</href>
     </p>
 </body>
 
