--- a/equipe15/oquee.html
+++ b/equipe15/oquee.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="utf-8" />
     <title>Treinamento</title>
 </head>
+
 <body>
     <h1>Tipos de treinamento</h1>
     <hr>
     <p>O treinamento se baseia na seguinte forma: </p>
     <h3>Presencial</h3>
-    
+    <p>O nosso curso presencial se baseia nos seguintes fatores:</p>
+    <ul>
+        <li>Lógica do framework</li>
+        <li>Utilização de blocos para ensinar de forma didática</li>
+        <li>Criação de problemas baseado nos assuntos dados</li>
+        <li>Resolução de problemas</li>
+    </ul>
 </body>
+
 </html>
