Fiz os exemplos de empresas que usam o VRawr

--- a/equipe15/oquee.html
+++ b/equipe15/oquee.html
@@ -3,20 +3,17 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Treinamento</title>
+    <title>O que é</title>
 </head>
 
 <body>
-    <h1>Tipos de treinamento</h1>
-    <hr>
-    <p>O treinamento se baseia na seguinte forma: </p>
-    <h3>Presencial</h3>
-    <p>O nosso curso presencial se baseia nos seguintes fatores:</p>
+    <br>
+    <h1>Exemplos de empresas que usam o VRaptor</h1>
     <ul>
-        <li>Lógica do framework</li>
-        <li>Utilização de blocos para ensinar de forma didática</li>
-        <li>Criação de problemas baseado nos assuntos dados</li>
-        <li>Resolução de problemas</li>
+        <li>MAMUTE</li>
+        <li>GUJ</li>
+        <li>Wine.com.br</li>
+        <li>Dentre outros!</li>
     </ul>
 </body>
 
