criamos mais uma parte do site da empresa

--- a/equipe15/index.html
+++ b/equipe15/index.html
@@ -33,6 +33,15 @@
         <li>Resolução de problemas</li>
     </ul>
     <br>
+    <br>
+    <h1>Exemplos de empresas que usam o VRaptor</h1>
+    <ul>
+        <li>MAMUTE</li>
+        <li>GUJ</li>
+        <li>Wine.com.br</li>
+        <li>Dentre outros!</li>
+    </ul>
+    <br>
     <h3>Ambiente Virtual</h3>
     <p>Serão feitos a continuação da aprendizagem através do Ambiente Virtual.</p>
 
@@ -50,7 +59,7 @@
             </blockquote>
         </p>
 
-        <a href="oquee.html">Nossa forma de treinamento</href>
+        <a href="oquee.html">Sobre a empresa</href>
     </p>
 </body>
 
