--- a/equipe15/oquee.html
+++ b/equipe15/oquee.html
@@ -3,18 +3,23 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>O que é</title>
+    <title>Sobre a empresa</title>
 </head>
 
 <body>
-    <br>
-    <h1>Exemplos de empresas que usam o VRaptor</h1>
-    <ul>
-        <li>MAMUTE</li>
-        <li>GUJ</li>
-        <li>Wine.com.br</li>
-        <li>Dentre outros!</li>
-    </ul>
+    <h1>Detalhes da empresa</h1>
+    <p> A empresa se especializa nos minimos detalhes
+        <br> pois a nossa satisfação é atender bem o cliente.
+    </p>
+    <h1>Quanto tempo ministra o curso</h1>
+    <p>
+        O curso dura em torno de "um ano e seis meses".
+    </p>
+    <h1>Informações relevantes</h1>
+    <p>
+        O curso é gratuito de otima qualidade e corresponde aos requistos do mercado.
+
+    </p>
 </body>
 
 </html>
