Explicação do nosso treinamento.

--- a/equipe15/oquee.html
+++ b/equipe15/oquee.html
@@ -17,7 +17,13 @@
     </p>
     <h1>Informações relevantes</h1>
     <p>
-        O curso é gratuito de otima qualidade e corresponde aos requistos do mercado.
+        O curso é gratuito   de otima qualidade e corresponde aos requistos do mercado.
+    </p>
+    <h1>Treinamento</h1>
+    <p>Criamos esse treinamento dedicando especialmente para <br>
+        pessoas que não tem muito tempo ou quem deseja aprender <br>
+        de uma forma breve e rápida.
+
 
     </p>
 </body>
