terminei o menu do site

--- a/equipe15/index.html
+++ b/equipe15/index.html
@@ -7,6 +7,8 @@
 </head>
 
 <body>
+    <h1 ><center>Menu da empresa</center></h1>   
+    
     <h1>Sobre o treinamento</h1>
     <p>O treinamento seria baseado no framework
         <br> MVC web para desenvolvimento ágil com Java.
@@ -60,7 +62,14 @@
         </p>
 
         <a href="oquee.html">Sobre a empresa</href>
-    </p>
+            <br>
+            <a href="Contato.html">Contatos</a>
+            <br>
+            <a href="Localizacao.html">Localização</a>
+            <br>
+            <a href="DireitosReservados.html">Direitos Reservados</a>  
+        </p>
+    
 </body>
 
 </html>
