Terminei o treinamento da empresa

--- a/equipe15/index.html
+++ b/equipe15/index.html
@@ -7,8 +7,10 @@
 </head>
 
 <body>
-    <h1 ><center>Menu da empresa</center></h1>   
-    
+    <h1>
+        <center>Menu da empresa</center>
+    </h1>
+
     <h1>Sobre o treinamento</h1>
     <p>O treinamento seria baseado no framework
         <br> MVC web para desenvolvimento ágil com Java.
@@ -22,30 +24,42 @@
         <b>certificado</b> de nosso curso, servirá amplamente para a carreira
         <br> de programador, assim como agregará seu conhecimento, através de métodos ágeis.
         <br>
-
         <h1>Tipos de treinamento</h1>
-    <hr>
-    <p>O treinamento se baseia na seguinte forma: </p>
-    <h3>Presencial</h3>
-    <p>O nosso curso presencial se baseia nos seguintes fatores:</p>
-    <ul>
-        <li>Lógica do framework</li>
-        <li>Utilização de blocos para ensinar de forma didática</li>
-        <li>Criação de problemas baseado nos assuntos dados</li>
-        <li>Resolução de problemas</li>
-    </ul>
-    <br>
-    <br>
-    <h1>Exemplos de empresas que usam o VRaptor</h1>
-    <ul>
-        <li>MAMUTE</li>
-        <li>GUJ</li>
-        <li>Wine.com.br</li>
-        <li>Dentre outros!</li>
-    </ul>
-    <br>
-    <h3>Ambiente Virtual</h3>
-    <p>Serão feitos a continuação da aprendizagem através do Ambiente Virtual.</p>
+        <hr>
+        <p>O treinamento se baseia na seguinte forma: </p>
+        <h3>Presencial</h3>
+        <p>O nosso curso presencial se baseia nos seguintes fatores:</p>
+        <ul>
+            <li>Lógica do framework</li>
+            <li>Utilização de blocos para ensinar de forma didática</li>
+            <li>Criação de problemas baseado nos assuntos dados</li>
+            <li>Resolução de problemas</li>
+        </ul>
+        <h1>Exemplos de empresas que usam o VRaptor</h1>
+        <ul>
+            <li>MAMUTE</li>
+            <li>GUJ</li>
+            <li>Wine.com.br</li>
+            <li>Dentre outros!</li>
+        </ul>
+        <h3>Ambiente Virtual</h3>
+        <p>Serão feitos a continuação da aprendizagem através do Ambiente Virtual.</p>
+        <h3>Tipos dos níveis</h3>
+        <p>Básico: </p>
+        <ul>
+            <li>Básico da linguagem java</li>
+            <li>Introdução ao VRaptor</li>
+        </ul>
+        <p>Intermediário: </p>
+        <ul>
+            <li>Orientação a objetos em java atrelado ao VRaptor</li>
+            <li>Profundidade maior ao VRaptor, usos, dentre outros</li>
+        </ul>
+        <p>Avançado: </p>
+        <ul>
+            <li>GOD Tier do VRaptor, você é contratado para nossa empresa.</li>
+        </ul>
+
 
         <h1>Sobre a empresa Vrawr</h1>
         <p>A mais de 5 minutos, empresas de todo o mundo contam com a Vrawr para a criação de
@@ -67,9 +81,9 @@
             <br>
             <a href="Localizacao.html">Localização</a>
             <br>
-            <a href="DireitosReservados.html">Direitos Reservados</a>  
-        </p>
-    
+            <a href="DireitosReservados.html">Direitos Reservados</a>
+    </p>
+
 </body>
 
 </html>
