Ajustei problemas encontrados com o decorrer do spring, até agora...

--- a/equipe15/index.html
+++ b/equipe15/index.html
@@ -8,26 +8,25 @@
 
 <body>
     <h1>
-        <center>Menu da empresa</center>
+        <center>VRawr</center>
     </h1>
 
-    <h1>Sobre o treinamento</h1>
-    <p>O treinamento seria baseado no framework
-        <br> MVC web para desenvolvimento ágil com Java.
-        <br> O treinamento consiste em como usar a ferramenta
-        <br> e como ela seria útil no dia a dia da programação.
+    <h2>Sobre o nosso treinamento especializado</h2>
+    <p>O treinamento seria baseado no framework MVC web para desenvolvimento ágil com Java.
+        <br>O treinamento consiste em como usar a ferramenta e como ela seria útil no dia a dia da programação.
         <br>
-        <br> Esse framework diminui drasticamente o tempo de trabalho
-        <br> que seria perdido com o código repetitivo.
-        <br>
-        <br> O
-        <b>certificado</b> de nosso curso, servirá amplamente para a carreira
-        <br> de programador, assim como agregará seu conhecimento, através de métodos ágeis.
-        <br>
-        <h1>Tipos de treinamento</h1>
         <hr>
-        <p>O treinamento se baseia na seguinte forma: </p>
-        <h3>Presencial</h3>
+        <h2>Por que eu usaria esse framework?</h2>
+        Esse framework diminui drasticamente o tempo de trabalho que seria perdido com o código repetitivo.
+        <br> Além disso, o
+        <b>certificado</b> de nosso curso, servirá amplamente para a carreira de programador, assim como agregará seu conhecimento,
+        através de métodos ágeis.
+        <br>
+        <br>
+        <hr>
+        <h2>Tipos de treinamento</h2>
+        <h3>O treinamento se baseia nas seguintes formas: </h3>
+        <h4>Presencial</h4>
         <p>O nosso curso presencial se baseia nos seguintes fatores:</p>
         <ul>
             <li>Lógica do framework</li>
@@ -35,49 +34,54 @@
             <li>Criação de problemas baseado nos assuntos dados</li>
             <li>Resolução de problemas</li>
         </ul>
-        <h1>Exemplos de empresas que usam o VRaptor</h1>
+        <hr>
+        <h2>Exemplos de empresas que usam o VRaptor</h2>
         <ul>
             <li>MAMUTE</li>
             <li>GUJ</li>
             <li>Wine.com.br</li>
             <li>Dentre outros!</li>
         </ul>
-        <h3>Ambiente Virtual</h3>
+        <hr>
+        <h2>Nossos ambiente virtual</h2>
         <p>Serão feitos a continuação da aprendizagem através do Ambiente Virtual.</p>
-        <h3>Tipos dos níveis</h3>
-        <p>Básico: </p>
+        <hr>
+        <h2>Tipos dos níveis de aprendizado:</h2>
+        <h3>Básico: </h3>
         <ul>
             <li>Básico da linguagem java</li>
             <li>Introdução ao VRaptor</li>
         </ul>
-        <p>Intermediário: </p>
+        <h3>Intermediário: </h3>
         <ul>
             <li>Orientação a objetos em java atrelado ao VRaptor</li>
             <li>Profundidade maior ao VRaptor, usos, dentre outros</li>
         </ul>
-        <p>Avançado: </p>
+        <h3>Avançado: </h3>
         <ul>
-            <li>GOD Tier do VRaptor, você é contratado para nossa empresa.</li>
+            <li>GOD Tier do VRaptor, você é contratado para nossa empresa. Não podemos perder você!</li>
         </ul>
-
-
+        <hr>
         <h1>Sobre a empresa Vrawr</h1>
-        <p>A mais de 5 minutos, empresas de todo o mundo contam com a Vrawr para a criação de
-            <br> um framework para os seus produtos, processos e sistemas.
+        <p>Desde o dia 25/11/19, empresas de todo o mundo contam com a Vrawr para a criação de um framework para os seus produtos,
+            processos e sistemas.
             <br> Além disso, utilizamos o nosso conhecimento para ampliar o conhecimento do programador.
             <br> A nossa empresa oferece boas maneiras de programação, assim como um café bem moído com aquela Cream Cracker
             que todo mundo respeita.
             <br>
-            <br>
-            <br> O nosso curso é importante pois ensinamos você a desenvolver em uma framework de uma maneira eficiente.
+            <br>O nosso curso é importante pois ensinamos você a desenvolver em uma framework de uma maneira eficiente.
             <blockquote>
                 <p>O curso é fantástico! ~Enzo Gabriel, Engenheiro de software na SpaceX e Tesla Motors.</p>
             </blockquote>
+            <blockquote>
+                <p>Fantastico é o curso! ~Gabriel Enzo, Engenheiro de software na Tesla Motors e SpaceX.</p>
+            </blockquote>
         </p>
-
+        <br>
+        <hr>
         <a href="oquee.html">Sobre a empresa</href>
             <br>
-            <a href="Contato.html">Contatos</a>
+            <a href="Contato.html">Contato</a>
             <br>
             <a href="Localizacao.html">Localização</a>
             <br>
