--- a/equipe15/oquee.html
+++ b/equipe15/oquee.html
@@ -7,23 +7,27 @@
 </head>
 
 <body>
+    <hr>
     <h1>Detalhes da empresa</h1>
-    <p> A empresa se especializa nos minimos detalhes
-        <br> pois a nossa satisfação é atender bem o cliente.
+    <p>A empresa é especializada nos minimos detalhes.
     </p>
-    <h1>Quanto tempo ministra o curso</h1>
+    <hr>
+    <h1>Qual é a duração do curso?</h1>
     <p>
-        O curso dura em torno de "um ano e seis meses".
+        O curso dura 1
+        <small>1/2</small> anos (um ano e meio).
     </p>
+    <hr>
     <h1>Informações relevantes</h1>
     <p>
-        O curso é gratuito   de otima qualidade e corresponde aos requistos do mercado.
+        O curso é gratuito com uma otima qualidade e corresponde aos requistos do mercado.
+        <br> O próprio curso certifica de que é disso que o mercado precisa, confie em mim!
     </p>
+    <hr>
     <h1>Treinamento</h1>
-    <p>Criamos esse treinamento dedicando especialmente para <br>
-        pessoas que não tem muito tempo ou quem deseja aprender <br>
-        de uma forma breve e rápida.
+    <p>Criamos esse treinamento dedicando especialmente para pessoas que não tem muito tempo ou que deseja aprender de forma breve e rápida.
     </p>
+    <hr>
 </body>
 
 </html>
