Reformulado o sobre a empresa + adição de logo

--- a/equipe15/index.html
+++ b/equipe15/index.html
@@ -7,20 +7,53 @@
 </head>
 
 <body>
-    <h1>
-        <center>VRawr</center>
-    </h1>
+    <center><img src="img/VRawr-logo.png"></center>
 
-    <h2>Sobre o nosso treinamento especializado</h2>
-    <p>O treinamento seria baseado no framework MVC web para desenvolvimento ágil com Java.
-        <br>O treinamento consiste em como usar a ferramenta e como ela seria útil no dia a dia da programação.
+    <center>
+        <h2 id="sobre_empresa">Sobre a empresa</h2>
+    </center>
+    <center>
+        <h3>Nossa missão</h3>
+    </center>
+    <p>Transformar os sonhos dos nossos alunos em realidade, por meio da educação, formação profissional e orientação ao
+        mercado de trabalho.</p>
+    <center>
+        <h3>Nossa visão</h3>
+    </center>
+    <p>Realizar sonhos e cultivar o conhecimento por meio da formação profissional, agregando valores perceptíveis para
+        o
+        país, os clientes, acionistas e parceiros.</p>
+    <center>
+        <h3>Nossos valores</h3>
+    </center>
+    <ul>
+        <li><b>Realização:</b> Concretizar projetos, procurando fazê-los da melhor maneira possível.</li>
+        <li><b>Profissionalismo:</b> Atuar com eficácia, usando de discernimento e coerência com empatia em todas as
+            atitudes.</li>
+        <li><b>Iniciativa:</b> Ser pró-ativo, avaliar os problemas que possam surgir e resolvê-los com criatividade e
+            conhecimento.</li>
+        <li>
+            <b>Justiça:</b> Disponibilizar oportunidades similares a todos.
+        </li>
+    </ul>
+    <hr>
+
+
+    <center>
+        <h2 id="sobre_o_treinamento">Sobre o nosso treinamento especializado</h2>
+    </center>
+    <p>O treinamento é baseado no framework MVC web para desenvolvimento ágil com Java. O treinamento focará em como
+        usar a ferramenta de vez e como ela será útil no dia a dia.
         <br>
         <hr>
-        <h2>Por que eu usaria esse framework?</h2>
-        Esse framework diminui drasticamente o tempo de trabalho que seria perdido com o código repetitivo.
-        <br> Além disso, o
-        <b>certificado</b> de nosso curso, servirá amplamente para a carreira de programador, assim como agregará seu conhecimento,
-        através de métodos ágeis.
+        <center>
+            <h2 id="pq_usar_framework">Por que eu usaria esse framework?</h2>
+        </center>
+        Esse framework diminui drasticamente o tempo de trabalho que seria perdido com o código repetitivo. Além disso,
+        o
+        <b>certificado</b> de nosso curso, servirá <em>amplamente</em> para a carreira de programador, assim como
+        agregará seu
+        conhecimento, através dos métodos ágeis disponibilizados pelo framework e pelo curso VRawr.
         <br>
         <br>
         <hr>
@@ -63,10 +96,12 @@
         </ul>
         <hr>
         <h1>Sobre a empresa Vrawr</h1>
-        <p>Desde o dia 25/11/19, empresas de todo o mundo contam com a Vrawr para a criação de um framework para os seus produtos,
+        <p>Desde o dia 25/11/19, empresas de todo o mundo contam com a Vrawr para a criação de um framework para os seus
+            produtos,
             processos e sistemas.
             <br> Além disso, utilizamos o nosso conhecimento para ampliar o conhecimento do programador.
-            <br> A nossa empresa oferece boas maneiras de programação, assim como um café bem moído com aquela Cream Cracker
+            <br> A nossa empresa oferece boas maneiras de programação, assim como um café bem moído com aquela Cream
+            Cracker
             que todo mundo respeita.
             <br>
             <br>O nosso curso é importante pois ensinamos você a desenvolver em uma framework de uma maneira eficiente.
@@ -87,6 +122,10 @@
             <br>
             <a href="DireitosReservados.html">Direitos Reservados</a>
     </p>
+    <a href="#sobre_empresa">Sobre a empresa</a>
+    <a href="#sobre_o_treinamento">Sobre o treinamento</a>
+    <a href="#pq_usar_framework">Por que usar o framework</a>
+
 
 </body>
 
