Reestruturei o index por completo

--- a/equipe15/index.html
+++ b/equipe15/index.html
@@ -7,11 +7,31 @@
 </head>
 
 <body>
-    <center><img src="img/VRawr-logo.png"></center>
+    <center><img src="img/VRawr-logo.png" id="logo"></center>
 
+    <center>
+        <h1 id="menu_principal">Menu principal</h1>
+
+        <a href="#sobre_empresa">Sobre nós</a><br>
+        <a href="#sobre_o_treinamento">Sobre o treinamento</a><br>
+        <a href="#pq_usar_framework">Por que usar o framework</a><br>
+        <a href="#tipos_treinamento">Os tipos de treinamento</a><br>
+        <a href="#niveis_aprendizado">Os níveis de aprendizado</a><br>
+        <a href="#exemplos_empresas">Exemplos de empresas que usam o VRaptor</a><br>
+        <a href="#comentarios_curso">Comentários sobre o curso</a><br>
+    </center>
+
+    <hr>
     <center>
         <h2 id="sobre_empresa">Sobre a empresa</h2>
     </center>
+    <p>Desde o dia 25/11/19, empresas de todo o mundo contam com a Vrawr para a criação de um framework para os seus
+        produtos,
+        processos e sistemas.
+        Além disso, utilizamos o nosso conhecimento para ampliar o conhecimento do programador.
+        A nossa empresa oferece boas maneiras de programação, assim como um excelente café bem moído
+        na hora com aquela Cream Cracker que todo mundo respeita.
+        <br><br>O nosso curso te ensina você a desenvolver o VRaptor de uma maneira eficiente.</p>
     <center>
         <h3>Nossa missão</h3>
     </center>
@@ -38,7 +58,6 @@
     </ul>
     <hr>
 
-
     <center>
         <h2 id="sobre_o_treinamento">Sobre o nosso treinamento especializado</h2>
     </center>
@@ -46,6 +65,7 @@
         usar a ferramenta de vez e como ela será útil no dia a dia.
         <br>
         <hr>
+
         <center>
             <h2 id="pq_usar_framework">Por que eu usaria esse framework?</h2>
         </center>
@@ -57,8 +77,13 @@
         <br>
         <br>
         <hr>
-        <h2>Tipos de treinamento</h2>
-        <h3>O treinamento se baseia nas seguintes formas: </h3>
+
+        <center>
+            <h2 id="tipos_treinamento">Tipos de treinamento</h2>
+        </center>
+        <center>
+            <h3>O treinamento se baseia nas seguintes formas: </h3>
+        </center>
         <h4>Presencial</h4>
         <p>O nosso curso presencial se baseia nos seguintes fatores:</p>
         <ul>
@@ -67,66 +92,80 @@
             <li>Criação de problemas baseado nos assuntos dados</li>
             <li>Resolução de problemas</li>
         </ul>
-        <hr>
-        <h2>Exemplos de empresas que usam o VRaptor</h2>
+        <h4>Virtual</h4>
+        <p>O nosso curso EAD se baseia nos seguintes fatores:</p>
         <ul>
-            <li>MAMUTE</li>
-            <li>GUJ</li>
-            <li>Wine.com.br</li>
-            <li>Dentre outros!</li>
+            <li>Flexibilidade</li>
+            <li>Mais econômico</li>
+            <li>Comodidade</li>
         </ul>
         <hr>
-        <h2>Nossos ambiente virtual</h2>
-        <p>Serão feitos a continuação da aprendizagem através do Ambiente Virtual.</p>
-        <hr>
-        <h2>Tipos dos níveis de aprendizado:</h2>
-        <h3>Básico: </h3>
+
+        <center>
+            <h2 id="niveis_aprendizado">Tipos dos níveis de aprendizado:</h2>
+        </center>
+        <h3>Básico</h3>
         <ul>
-            <li>Básico da linguagem java</li>
-            <li>Introdução ao VRaptor</li>
+            <li>O essencial da linguagem java;</li>
+            <li>Introdução ao VRaptor.</li>
         </ul>
-        <h3>Intermediário: </h3>
+        <h3>Intermediário</h3>
         <ul>
-            <li>Orientação a objetos em java atrelado ao VRaptor</li>
-            <li>Profundidade maior ao VRaptor, usos, dentre outros</li>
+            <li>Orientação a objetos em java atrelado ao VRaptor;</li>
+            <li>Maior profundidade ao VRaptor, uso da plataforma por completo.</li>
         </ul>
-        <h3>Avançado: </h3>
+        <h3>Avançado</h3>
         <ul>
-            <li>GOD Tier do VRaptor, você é contratado para nossa empresa. Não podemos perder você!</li>
+            <li>Você é contratado para nossa empresa. Não podemos perder você!</li>
         </ul>
         <hr>
-        <h1>Sobre a empresa Vrawr</h1>
-        <p>Desde o dia 25/11/19, empresas de todo o mundo contam com a Vrawr para a criação de um framework para os seus
-            produtos,
-            processos e sistemas.
-            <br> Além disso, utilizamos o nosso conhecimento para ampliar o conhecimento do programador.
-            <br> A nossa empresa oferece boas maneiras de programação, assim como um café bem moído com aquela Cream
-            Cracker
-            que todo mundo respeita.
-            <br>
-            <br>O nosso curso é importante pois ensinamos você a desenvolver em uma framework de uma maneira eficiente.
-            <blockquote>
-                <p>O curso é fantástico! ~Enzo Gabriel, Engenheiro de software na SpaceX e Tesla Motors.</p>
-            </blockquote>
-            <blockquote>
-                <p>Fantastico é o curso! ~Gabriel Enzo, Engenheiro de software na Tesla Motors e SpaceX.</p>
-            </blockquote>
-        </p>
-        <br>
+
+        <center>
+            <h2 id="exemplos_empresas">Exemplos de empresas que usam o VRaptor</h2>
+        </center>
+        <ul>
+            <li><a href="http://www.mamute.org/" target="_blank">MAMUTE</a></li>
+            <li><a href="https://www.guj.com.br/" target="_blank">GUJ</a></li>
+            <li><a href="https://www.wine.com.br/" target="_blank">Wine.com.br</a></li>
+            <li><a href="http://www.defferrari.com.br/" target="_blank">Grupo Defferrari</a></li>
+            <li><a href="https://www.locaweb.com.br/" target="_blank">Locaweb</a></li>
+            <li><a href="https://www.isobar.com/global/en/" target="_blank">Agênciaclick</a></li>
+            
+        </ul>
         <hr>
-        <a href="oquee.html">Sobre a empresa</href>
+
+        <center>
+            <h2 id="comentarios_curso">Comentários sobre o curso</h2>
+        </center>
+        <blockquote>
+            <p>(Enzo Gabriel, 13 anos. Engenheiro de software na SpaceX e Tesla Motors)
+                <br>Antes eu nem sabia da existencia desse método, depois que aprendi na VRawr,
+                nunca mais deixei de usar!</p>
             <br>
-            <a href="Contato.html">Contato</a>
+            <p>(Brasil Washington C.A. Júnior, 24 anos. Gari e programador front-end)
+                <br>Muito bom!! Curso Top!
+                <br>
+                Ótimo curso, consegui rapidamente ingressar no mercado após o curso!
+                Pode comprar sem medo! Melhorou bastante o meu conhecimento sobre VRaptor,
+                tanto é que virou um estilo de vida que irei passar para as futuras gerações.</p>
             <br>
-            <a href="Localizacao.html">Localização</a>
-            <br>
-            <a href="DireitosReservados.html">Direitos Reservados</a>
+            <p>(Jacinto A. R. Santos, 33 anos. Auto-didata e Ph.D em Educação Física pela UNICAMP)
+                <br>Material muito bom, totalemente diferente de outros cursos.
+                Estou abismado com tanto conhecimento, é tudo e mais um pouco do que eu esperava.
+                Muito potente o VRawr.</p>
+        </blockquote>
     </p>
-    <a href="#sobre_empresa">Sobre a empresa</a>
-    <a href="#sobre_o_treinamento">Sobre o treinamento</a>
-    <a href="#pq_usar_framework">Por que usar o framework</a>
-
-
+    <hr>
+    <a href="oquee.html">Sobre a empresa</href>
+        <br>
+        <a href="Contato.html">Contato</a>
+        <br>
+        <a href="Localizacao.html">Localização</a>
+        <br>
+        <a href="DireitosReservados.html">Direitos Reservados</a>
+        <br>
+        <a href="#logo">Voltar ao topo</a>
+        </p>
 </body>
 
 </html>
