Reformulei a aba de contato

--- a/equipe15/Contato.html
+++ b/equipe15/Contato.html
@@ -3,15 +3,29 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Contatos</title>
-    <p>Claudevan: +55 (11) 98765-4321</p>
-
-    <a href="index.html">Voltar para a página inicial
-    </a>
+    <title>Contato</title>
 </head>
 
 <body>
+    <center>
+        <br>
+        <p>Contato: (82) 2126-6290</p>
+        <address>
+            <a href="mailto:portal@ifal.edu.br">Email</a><br>
+            Visite-nos em:
+            <br><iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7869.892490641686!2d-35.803065813994515!3d-9.513400063214393!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xbf3508b4ce144c3e!2sIFAL%20-%20Campus%20Rio%20Largo!5e0!3m2!1spt-BR!2sbr!4v1574898378650!5m2!1spt-BR!2sbr"
+                width="400" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe><br>
+            <a href="index.html">VRawr</a>
+            <br>
+            Rio Largo, Alagoas
+            <br>
+            Brazil
+        </address>
+        <br>
 
+        <a href="index.html">Voltar para a página inicial</a>
+    </center>
 </body>
 
 </html>
