Consertei os direitos reservados

--- a/equipe15/DireitosReservados.html
+++ b/equipe15/DireitosReservados.html
@@ -4,31 +4,27 @@
 <head>
     <meta charset="utf-8" />
     <title>Direitos Reservados</title>
-    <p>
-            Lorem ipsum accumsan donec hac placerat torquent sagittis luctus curae adipiscing, iaculis placerat phasellus vitae phasellus magna elit etiam himenaeos, pellentesque interdum vulputate velit mauris fermentum risus fringilla semper. 
-            neque proin sem eu auctor venenatis a neque imperdiet, diam justo neque rhoncus quam cubilia nisl phasellus fusce, enim quisque aliquam at tristique curabitur netus. 
-            turpis eros sed bibendum commodo lacinia inceptos ultricies venenatis quam himenaeos lorem venenatis, congue dolor blandit cubilia netus maecenas donec interdum ut lacus conubia. 
-            class lacinia leo nam suspendisse posuere consequat aenean rhoncus aliquet, interdum hac id at senectus erat potenti elementum, per platea leo ornare et conubia erat dapibus. 
-            </p>
-            <p>
-            Et magna accumsan lorem integer ullamcorper auctor non purus, suscipit pulvinar auctor tristique sapien quisque a orci proin, ligula egestas molestie nam porttitor aliquet turpis. 
-            quisque duis imperdiet torquent fames volutpat lorem mattis ultricies curae, enim eleifend inceptos curabitur tortor justo erat senectus nec, risus luctus consequat bibendum nibh sit et augue. 
-            risus primis quis ipsum amet curabitur nostra fringilla massa venenatis, sollicitudin est gravida augue torquent scelerisque porttitor platea neque in, aenean sagittis lacus curae a curabitur faucibus mi. 
-            pharetra vehicula class netus donec aliquam urna, dictum libero posuere malesuada aptent eget per, convallis ultricies nunc auctor donec. 
-            </p>
-            <p>
-            Quisque vehicula tincidunt per tempor rhoncus himenaeos massa inceptos, at eget ullamcorper facilisis vitae blandit conubia cras ligula, platea potenti sodales litora nec urna felis. 
-            aliquam vivamus vel posuere cursus eleifend adipiscing nisi etiam aliquam, semper etiam dui quisque nunc bibendum massa nam, sit praesent libero hac quisque ultrices luctus donec. 
-            amet aenean hac interdum fusce curabitur nunc eros cursus consectetur dapibus magna sed, luctus quam fusce ultricies aenean nostra hendrerit condimentum egestas dictumst. 
-            tempor posuere ante et class quam nulla at fusce mauris sapien sodales pharetra, ante interdum platea rhoncus dolor semper suscipit primis sem netus. 
-            </p>
 
-    <a href="index.html">Voltar para a página inicial
-    </a>
 </head>
 
 <body>
+    <h2>Direitos Reservados</h2>
+    <p>
+        Copyright©2019-2019, VRawr Company. Todos os direitos reservados.
+        Todos os textos, imagens, gráficos, animações, vídeos, músicas, sons e outros materiais são
+        protegidos por direitos autorais e outros direitos de propriedade intelectual
+        pertencentes à VRawr Company, suas subsidiárias, afiliadas e licenciantes.
+    </p>
+    <p>
+        A VRawr Company é, também, proprietária dos direitos autorais de desenvolvimento,
+        seleção, coordenação, diagramação e disposição dos materiais neste site. É expressamente
+        vedada a cópia ou reprodução destes materiais para uso ou distribuição comercial,
+        a modificação destes materiais, sua inclusão em outros websites e o seu envio e publicação
+        em outros meios digitais e físicos, ou de qualquer outra forma dispor de tais materiais
+        sem a devida autorização, estando sujeito às responsabilidades e sanções legais.
+    </p>
 
+    <a href="index.html">Voltar para a página inicial</a>
 </body>
 
 </html>
