--- a/equipe15/oquee.html
+++ b/equipe15/oquee.html
@@ -8,26 +8,65 @@
 
 <body>
     <hr>
-    <h1>Detalhes da empresa</h1>
-    <p>A empresa é especializada nos minimos detalhes.
-    </p>
+    <center>
+        <center><img src="img/VRawr-logo.png" id="logo"></center>
+
+        <a href="#sobre">Sobre a empresa</a><br>
+        <a href="#duracao_curso">Duração do curso</a><br>
+        <a href="#sobre_treinamento">Sobre o treinamento</a><br>
+        <a href="#info_relevante">Informações relevantes</a><br>
+
+        <h1 id="sobre">Sobre da empresa</h1>
+    </center>
+
+    <p>Desde o dia 25/11/19, empresas de todo o mundo contam com a Vrawr para a criação de um framework para
+        os seus produtos, processos e sistemas. Além disso, utilizamos o nosso conhecimento para ampliar o
+        conhecimento do programador. A nossa empresa oferece boas maneiras de programação, assim como um
+        excelente café bem moído na hora com aquela Cream Cracker que todo mundo respeita.
+        <br><br>O nosso curso te ensina você a desenvolver o VRaptor de uma maneira eficiente.</p>
     <hr>
-    <h1>Qual é a duração do curso?</h1>
+    <center>
+        <h2 id="duracao_curso">Qual é a duração do curso?</h2>
+    </center>
     <p>
-        O curso dura 1
-        <small>1/2</small> anos (um ano e meio).
+        O nosso curso de VRaptor tem a duração de 1 ano. Com a exigência da prática profissional,
+        o tempo máximo que o aluno pode levar para fazer o curso completo é de 2 anos.
+        <br>
+        Nosso curso lhe dá total apoio para que termine o curso e ingresse o mais rápido possível no
+        mercado de trabalho. Nós sabemos o quão ruim é quando não temos uma ajuda! Não se preocupe.
+        A VRawr está aqui para suprir tanto com conhecimento como também com estágios e empregos.
     </p>
     <hr>
-    <h1>Informações relevantes</h1>
+    <center>
+        <h2 id="sobre_treinamento">Sobre o treinamento</h2>
+    </center>
     <p>
-        O curso é gratuito com uma otima qualidade e corresponde aos requistos do mercado.
-        <br> O próprio curso certifica de que é disso que o mercado precisa, confie em mim!
+        O curso da VRawr sobre o VRaptor tem duração média de 1 ano e é oferecida em grau de curso técnico
+        profissionalizante.
+        <br><br>
+        A estrutura curricular do curso apresenta algumas disciplinas das áreas de Programação e Engenharia de Software.
+        As disciplinas de VRaptor são teóricas e experimentais e o estudante aprende conceitos sobre
+        Introdução a Java, VRaptor incluso ao Java, Orientação à objetos com VRaptor,
+        Modelos de negócios e implementações na área de trabalho e desenvolvimento do zero ao avançado, entre outros.
+        <br><br>
+        Os alunos que optam pelo curso à distância (EAD) cursam as mesmas disciplinas, porém com mais tempo
+        e conforme ele deseja progredir.
+        <br>
     </p>
     <hr>
-    <h1>Treinamento</h1>
-    <p>Criamos esse treinamento dedicando especialmente para pessoas que não tem muito tempo ou que deseja aprender de forma breve e rápida.
+    <center>
+        <h2 id="info_relevante">Informações relevantes</h2>
+    </center>
+    <p>
+        O curso oferece as seguintes linhas de serviços técnicos e tecnológicos:
     </p>
+    <ul>
+        <li>consultoria em Gestão de Qualidade de Software, Produção e Gestão Integrada;</li>
+        <li>assistência Técnica e Melhoria de Softwares e Produtos;</li>
+        <li>pesquisa Aplicada em Parceria com Empresas.</li>
+    </ul>
     <hr>
+    <a href="index.html">Voltar à página principal</a><br>
 </body>
 
 </html>
