Adicionei a logo e refinei o front-end

--- a/equipe15/Contato.html
+++ b/equipe15/Contato.html
@@ -7,10 +7,10 @@
 </head>
 
 <body>
+    <center><img src="img/VRawr-logo.png" id="logo"></center>
     <center>
-        <br>
-        <p>Contato: (82) 2126-6290</p>
         <address>
+            Contato: (82) 2126-6290 <br>
             <a href="mailto:portal@ifal.edu.br">Email</a><br>
             Visite-nos em:
             <br><iframe
@@ -24,7 +24,7 @@
         </address>
         <br>
 
-        <a href="index.html">Voltar para a página inicial</a>
+        <a href="index.html">Voltar à página inicial</a>
     </center>
 </body>
 
