--- a/equipe15/DireitosReservados.html
+++ b/equipe15/DireitosReservados.html
@@ -8,7 +8,9 @@
 </head>
 
 <body>
-    <h2>Direitos Reservados</h2>
+    <center><img src="img/VRawr-logo.png" id="logo"></center>
+
+    <center><h2>Direitos Reservados</h2></center>
     <p>
         Copyright©2019-2019, VRawr Company. Todos os direitos reservados.
         Todos os textos, imagens, gráficos, animações, vídeos, músicas, sons e outros materiais são
@@ -24,7 +26,7 @@
         sem a devida autorização, estando sujeito às responsabilidades e sanções legais.
     </p>
 
-    <a href="index.html">Voltar para a página inicial</a>
+    <center><a href="index.html">Voltar à página inicial</a></center>
 </body>
 
 </html>
