--- a/equipe15/Localizacao.html
+++ b/equipe15/Localizacao.html
@@ -8,10 +8,12 @@
 </head>
 
 <body>
+        <center><img src="img/VRawr-logo.png" id="logo"></center>
         <center><h2>Localização</h2>
+            <br>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3934.962684520509!2d-35.80210601466342!3d-9.511971607658102!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xbf3508b4ce144c3e!2sIFAL%20-%20Campus%20Rio%20Largo!5e0!3m2!1spt-BR!2sbr!4v1574899775714!5m2!1spt-BR!2sbr" width="800" height="600" frameborder="0" style="border:0;" allowfullscreen=""></iframe><br>
 
-        <a href="index.html">Voltar para a página inicial</a>
+        <a href="index.html"><b>Voltar à página inicial</b></a>
     </center>
 </body>
 
