Refinei o front-end

--- a/equipe15/index.html
+++ b/equipe15/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>O Vrawr</title>
+    <title>O VRawr</title>
 </head>
 
 <body>
@@ -31,7 +31,7 @@
         Além disso, utilizamos o nosso conhecimento para ampliar o conhecimento do programador.
         A nossa empresa oferece boas maneiras de programação, assim como um excelente café bem moído
         na hora com aquela Cream Cracker que todo mundo respeita.
-        <br><br>O nosso curso te ensina você a desenvolver o VRaptor de uma maneira eficiente.</p>
+        <br><br>O nosso curso te ensina você a desenvolver o VRaptor de uma maneira eficiente. De verdade.</p>
     <center>
         <h3>Nossa missão</h3>
     </center>
