--- a/equipe15/oquee.html
+++ b/equipe15/oquee.html
@@ -23,7 +23,7 @@
         os seus produtos, processos e sistemas. Além disso, utilizamos o nosso conhecimento para ampliar o
         conhecimento do programador. A nossa empresa oferece boas maneiras de programação, assim como um
         excelente café bem moído na hora com aquela Cream Cracker que todo mundo respeita.
-        <br><br>O nosso curso te ensina você a desenvolver o VRaptor de uma maneira eficiente.</p>
+        <br><br>O nosso curso te ensina você a desenvolver o VRaptor de uma maneira eficiente. De verdade.</p>
     <hr>
     <center>
         <h2 id="duracao_curso">Qual é a duração do curso?</h2>
@@ -34,7 +34,7 @@
         <br>
         Nosso curso lhe dá total apoio para que termine o curso e ingresse o mais rápido possível no
         mercado de trabalho. Nós sabemos o quão ruim é quando não temos uma ajuda! Não se preocupe.
-        A VRawr está aqui para suprir tanto com conhecimento como também com estágios e empregos.
+        A VRawr está aqui para suprir tanto com conhecimento como também com estágios e empregos!
     </p>
     <hr>
     <center>
@@ -66,7 +66,7 @@
         <li>pesquisa Aplicada em Parceria com Empresas.</li>
     </ul>
     <hr>
-    <a href="index.html">Voltar à página principal</a><br>
+    <center><a href="index.html">Voltar à página principal</a></center>
 </body>
 
 </html>
