coloquei o link da pagina inicial na logo das demais paginas, trazendo a interação e facilidade de locomocção entre a pagina incial e as demais paginas

--- a/equipe15/index.html
+++ b/equipe15/index.html
@@ -164,7 +164,7 @@
         <br>
         <a href="DireitosReservados.html">Direitos Reservados</a>
         <br>
-        <a href="#logo">Voltar ao topo</a>
+        <center><a href="#logo">Voltar ao topo</a></center>
         </p>
 </body>
 
