--- a/equipe15/oquee.html
+++ b/equipe15/oquee.html
@@ -9,7 +9,8 @@
 <body>
     <hr>
     <center>
-        <center><img src="img/VRawr-logo.png" id="logo"></center>
+        <center><a href="file:///home/lottuszin/workspace/equipe15/equipe15/index.html">
+            <img src="img/VRawr-logo.png" id="logo"></a></center>
 
         <a href="#sobre">Sobre a empresa</a><br>
         <a href="#duracao_curso">Duração do curso</a><br>
@@ -66,7 +67,7 @@
         <li>pesquisa Aplicada em Parceria com Empresas.</li>
     </ul>
     <hr>
-    <center><a href="index.html">Voltar à página principal</a></center>
+    <center><a href="#logo">Voltar ao topo</a></center>
 </body>
 
 </html>
