--- a/equipe15/Contato.html
+++ b/equipe15/Contato.html
@@ -7,7 +7,8 @@
 </head>
 
 <body>
-    <center><img src="img/VRawr-logo.png" id="logo"></center>
+    <center><a href="file:///home/lottuszin/workspace/equipe15/equipe15/index.html">
+        <img src="img/VRawr-logo.png" id="logo"></a></center>
     <center>
         <address>
             Contato: (82) 2126-6290 <br>
@@ -23,8 +24,12 @@
             Brazil
         </address>
         <br>
+        <br>
+        
 
-        <a href="index.html">Voltar à página inicial</a>
+        <a href="#logo">Voltar ao topo</a>
+
+    
     </center>
 </body>
 
