--- a/equipe15/DireitosReservados.html
+++ b/equipe15/DireitosReservados.html
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-    <center><img src="img/VRawr-logo.png" id="logo"></center>
+    <center><a href="file:///home/lottuszin/workspace/equipe15/equipe15/index.html">
+        <img src="img/VRawr-logo.png" id="logo"></a></center>
 
     <center><h2>Direitos Reservados</h2></center>
     <p>
@@ -26,7 +27,7 @@
         sem a devida autorização, estando sujeito às responsabilidades e sanções legais.
     </p>
 
-    <center><a href="index.html">Voltar à página inicial</a></center>
+    <center><<a href="#logo">Voltar ao topo</a></center>
 </body>
 
 </html>
