Correções de bugs

--- a/equipe15/Contato.html
+++ b/equipe15/Contato.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <center><a href="file:///home/lottuszin/workspace/equipe15/equipe15/index.html">
+    <center><a href="index.html">
         <img src="img/VRawr-logo.png" id="logo"></a></center>
     <center>
         <address>
