--- a/equipe15/oquee.html
+++ b/equipe15/oquee.html
@@ -9,7 +9,7 @@
 <body>
     <hr>
     <center>
-        <center><a href="file:///home/lottuszin/workspace/equipe15/equipe15/index.html">
+        <center><a href="index.html">
             <img src="img/VRawr-logo.png" id="logo"></a></center>
 
         <a href="#sobre">Sobre a empresa</a><br>
