--- a/equipe15/Localizacao.html
+++ b/equipe15/Localizacao.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <center><a href="file:///home/lottuszin/workspace/equipe15/equipe15/index.html">
+    <center><a href="index.html">
         <img src="img/VRawr-logo.png" id="logo"></a></center>
         <center><h2>Localização</h2>
             <br>
