Adicionei o menu dos cursos disponíveis

--- a/equipe15/index.html
+++ b/equipe15/index.html
@@ -14,6 +14,7 @@
 
         <a href="#sobre_empresa">Sobre nós</a><br>
         <a href="#sobre_o_treinamento">Sobre o treinamento</a><br>
+        <a href="cursos.html">Nossos cursos</a><br>
         <a href="#pq_usar_framework">Por que usar o framework</a><br>
         <a href="#tipos_treinamento">Os tipos de treinamento</a><br>
         <a href="#niveis_aprendizado">Os níveis de aprendizado</a><br>
