--- a/equipe15/cursos.html
+++ b/equipe15/cursos.html
@@ -9,10 +9,86 @@
 </head>
 
 <body>
-    <center><a href="index.html"><img src="img/VRawr-logo.png" id="logo"></a></center>
+    <center><a href="index.html"><img src="img/VRawr-logo.png" id="logo"></a><br>
+        <a href="#cursos_certificacao">Nossos cursos com certificado</a><br>
+        <a href="#eventos">Nossos eventos promovidos pela empresa</a><br>
+    </center>
+    <center>
+        <hr>
+        <h2 id="cursos_certificacao">Cursos de certificação</h2>
+        <hr>
+        <h3>Curso Desenvolvedor VRaptor Completo + 10 de projetos.</h3>
+        <p>O treinamento de VRaptor mais vendido no Brasil</p>
+        <h3>O que você aprenderá</h3>
+        <p>Aprenderá a criar projetos ágeis utilizando o VRaptor.
+            Desde técnicas de Front End até Back End.
+            São 14 cursos do ABSOLUTO zero ao profissional.</p>
+        <p>Conquiste a liberdade financeira trabalhando de casa.</p>
+        <p>Crie projetos web profissionais com as linguagens
+            nas suas últimas versões. HTML5, CSS3, Javascript,
+            ECMAScript 6, Bootstrap, PHP, PHP com AJAX e muito mais.</p>
+        <p>Estudo nos dias e horários que você quiser.</p>
+        <br>
+        <p>Apenas R$19,90! Clique aqui para comprar: <button type="text" onclick="Evento()">Comprar agora</button></p>
+    </center>
+    <hr>
+    <center>
+        <h3>Apostila Web ágil com VRaptor, Hibernate e AJAX</h3>
+        <p>Aprenda tudo sobre os frameworks para desenvolvimento web
+            e como utilizá-los para seu sucesso.
+        </p>
+        <h3>O que você aprenderá</h3>
+        <p>Tudo que vcê precisa saber para construir
+            aplicações modernas para Web</p>
+        <p>Últimos recursos de HTML, CSS, Javascript e vários frameworks</p>
+        <p>Aprender CSS 3 e como aplicar estilo usando as
+            últimas tecnologias: CSS Grid, Flexbox e muito mais</p>
+        <p>Projeto de aplicações reais</p>
+        <br>
+        <p>Apenas R$24,99! Clique aqui para comprar: <button type="text" onclick="Evento()">Comprar agora</button></p>
+    </center>
+    <hr>
+    <center>
+        <h2 id="eventos">Eventos</h2>
+        <hr>
 
-    <p>Uma página vazia... Você poderia me preencher? :(</p>
+        <h3>VRaptor Celebration 2020</h3>
+        <p>
+            Celebre a chegada de 2020 no maior Réveillon VRaptor,
+            com atrações nacionais de Hugo Barra (gerente mundial
+            do android), buffet completo e celulares grátis!
+            garanta <b>agora</b> seu ingresso!
+        </p>
+        <h3>Sobre o palestrante</h3>
+        <p>Enquanto estava cursando Engenharia Elétrica na Universidade Federal de Minas Gerais, Hugo Barras conheceu
+            detalhes sobre o processo de seleção do Instituto de Tecnologia de Massachusetts (MIT). Um ano depois,
+            entrou para o MIT, onde cursou Ciências da Computação e chegou a trabalhar no laboratório de inteligência
+            artificial do próprio instituto. Não demorou muito para que fosse descoberto pelo Google e convidado a
+            integrar uma das equipes da gigante da internet.</p>
+        <p>Barra começou adaptando serviços da empresa para a plataforma móvel, como o Gmail e, com o passar do tempo,
+            conquistou novos cargos, chegando ao atual: gerente mundial do Android. E o SO do Google está em boas mãos.
+            Em entrevista para a revista Superinteressante, o mineiro de 35 anos declarou querer “ter certeza de que o
+            sistema operacional é o melhor e mais rico possível”.</p>
+        <h3>Localização</h3>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3933.640481480663!2d-35.69802218520887!3d-9.626191293108064!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x70146806a3d4059%3A0x6e4f017f28b43e5b!2sR.%20Bacharel%20Virg%C3%ADlio%20da%20Rocha%20Marques%20-%20Cruz%20das%20Almas%2C%20Macei%C3%B3%20-%20AL!5e0!3m2!1spt-BR!2sbr!4v1575328846621!5m2!1spt-BR!2sbr"
+            width="300" height="200" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+        <h3>Horário</h3>
+        <p>31 de dez. de 2019 22:00 - 1 de jan. de 2020 09:00</p>
+        <button type="text" onclick="Evento2()">Participar</button>
+    </center>
+    <hr>
+
     <center><a href="#logo">Voltar ao topo</a></center>
 </body>
+<script>
+    function Evento() {
+        alert('Curso comprado com sucesso!')
+    }
+
+    function Evento2() {
+        alert('Inscrição feita com sucesso!')
+    }
+</script>
 
 </html>
