--- a/equipe15/cursos.html
+++ b/equipe15/cursos.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="Pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -29,7 +29,7 @@
             ECMAScript 6, Bootstrap, PHP, PHP com AJAX e muito mais.</p>
         <p>Estudo nos dias e horários que você quiser.</p>
         <br>
-        <p>Apenas R$19,90! Clique aqui para comprar: <button type="text" onclick="Evento()">Comprar agora</button></p>
+        <p>Apenas R$19,90! Clique aqui para comprar: <form method="get" action=" Dados_pagamento.html"><button type="submit">Efetuar o pagamento</button></form>
     </center>
     <hr>
     <center>
@@ -45,7 +45,7 @@
             últimas tecnologias: CSS Grid, Flexbox e muito mais</p>
         <p>Projeto de aplicações reais</p>
         <br>
-        <p>Apenas R$24,99! Clique aqui para comprar: <button type="text" onclick="Evento()">Comprar agora</button></p>
+        <p>Apenas R$24,99! Clique aqui para comprar:<form method="get" action=" Dados_pagamento.html"><button type="submit">Efetuar o pagamento</button></form>
     </center>
     <hr>
     <center>
